--- a/css/style.css
+++ b/css/style.css
@@ -246,12 +246,13 @@ a {
   margin-bottom: 31px;
   margin-top: 30px;
   padding: 12px;
+  /* border: 2px solid blue; */
 }
 
 .wrapper .blog-item {
   width: 344.67px;
-  height: auto;
   padding: 24px;
+  /* border: 2px solid red; */
 }
 
 .wrapper .blog-item .upper-part {
@@ -260,13 +261,14 @@ a {
 
 .blog-item .upper-part .img-wrapper {
   max-width: 386px;
-  height: 281px;
-  margin-bottom: 12px;
+  height: auto;
+  margin-bottom: auto;
 }
 
 .img-wrapper img {
   width: 100%;
-  height: 100%;
+  height: auto;
+  margin-bottom: 0.2em;
   object-fit: cover;
 }
 
