Responsive for Large and Medium

--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,20 @@ a {
   align-items: center;
   justify-content: space-between;
 }
+.header #checkbox {
+  display: none;
+}
+
+.header .fa-bars {
+  position: absolute;
+  display: inline-block;
+  right: 30px;
+  font-size: 24px;
+  display: block;
+  cursor: pointer;
+  display: none;
+  z-index: 10;
+}
 
 .header .right-info {
   width: 548px;
@@ -154,7 +168,7 @@ a {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  padding: 0px 40px;
+  padding: 0px 40px 20px 40px;
 }
 
 .wrapper .service-item {
@@ -372,7 +386,9 @@ a {
   color: #2ed3cb;
 }
 
-.footer-section-2{
+/* --------------------------------Footer Section-2--------------------------------------- */
+
+.footer-section-2 {
   font-size: 14px;
   background: #292838;
   padding-bottom: 20px;
@@ -381,6 +397,119 @@ a {
   align-items: end;
 }
 
-.footer-section-2 a{
+.footer-section-2 a {
   color: white;
+}
+
+/* --------------------------------RESPONSIVENESS--------------------------------------- */
+
+/*-------------- LARGE----------------------- */
+
+@media (max-width: 905px) {
+  .banner-details .left .heading {
+    font-size: 25px;
+    line-height: 35px;
+  }
+  .banner-details .left .sub-heading {
+    font-size: 12px;
+  }
+}
+
+/*-------------- MEDIUM----------------------- */
+
+@media (max-width: 870px) {
+  .banner-details {
+    flex-direction: column-reverse;
+    height: auto;
+    margin: 0;
+  }
+  .banner-details .left {
+    margin: 0px;
+  }
+  .banner-details .left .heading {
+    text-align: center;
+    margin: auto;
+  }
+  .banner-details .left .sub-heading {
+    text-align: center;
+    margin: auto;
+  }
+  .banner-details .left .buttons {
+    display: flex;
+    justify-content: center;
+  }
+  .service-section .wrapper {
+    height: auto;
+    flex-direction: column;
+  }
+  .wrapper .service-item {
+    margin-bottom: 5%;
+  }
+  .blog .wrapper {
+    flex-direction: column;
+    align-items: center;
+  }
+  .container .footer-section-1 {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .bottom-navbar {
+    flex-direction: column;
+    align-items: none;
+    padding: 72px 0 60px 0;
+  }
+  .footer-section-1 .sub-heading {
+    margin-right: 0;
+  }
+  .footer-section-1 .left {
+    max-width: 512px;
+    text-align: center;
+  }
+  .left .text {
+    margin: 0;
+  }
+  .footer-section-1 .right {
+    margin-right: 0;
+  }
+
+  .header .right-info {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    background-color: whitesmoke;
+    display: none;
+    z-index: 2;
+    text-align: center;
+  }
+
+  .header #checkbox:checked ~ .right-info {
+    display: block;
+  }
+
+  .header .right-info ul {
+    margin-top: 20%;
+    width: 100vw;
+    height: 50vh;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 10px;
+  }
+
+  .right-info ul li {
+    margin-bottom: 10vh;
+  }
+
+  .header .fa-bars {
+    display: block;
+  }
+  .right-info .button a {
+    margin: auto;
+  }
 }
