--- a/css/style.css
+++ b/css/style.css
@@ -511,14 +511,14 @@ a {
 }
 
 /*-------------- SMALL----------------------- */
-@media (max-width: 560px) {
+@media (max-width: 595px) {
   .footer-section-1 .left {
     padding: 0 10% 0 10%;
   }
   .footer-section-1 .right {
     flex-direction: column;
     align-items: center;
-    padding-left: 40px;
+    /* padding-left: 40px; */
     width: 100%;
   }
 
@@ -535,6 +535,9 @@ a {
   .banner-details .right img {
     height: auto;
     width: 100%;
+  }
+  .wrapper .blog-item{
+    padding: 0;
   }
 
 }
