--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,16 @@ a {
   z-index: 10;
 }
 
+.header .logo .logo-text{
+  font-size: 130%;
+  color: white;
+  display: none;
+  background-color: #4E42D9;
+  border-radius: 18%;
+  padding: 3px 8px;
+
+}
+
 .header .right-info {
   width: 548px;
   height: 50px;
@@ -490,6 +500,7 @@ a {
     text-align: center;
   }
 
+
   .header #checkbox:checked ~ .right-info {
     display: block;
   }
@@ -514,9 +525,13 @@ a {
   .right-info .button a {
     margin: auto;
   }
+  .wrapper .blog-item{
+    margin-bottom: 8%;
+  }
 }
 
 /*-------------- SMALL----------------------- */
+
 @media (max-width: 595px) {
   .footer-section-1 .left {
     padding: 0 10% 0 10%;
@@ -542,8 +557,36 @@ a {
     height: auto;
     width: 100%;
   }
-  .wrapper .blog-item{
-    padding: 0;
+}
+
+/*-------------- MINI----------------------- */
+
+@media (max-width: 418px){
+  .banner-details .left .buttons{
+    padding: 15px 23px;
+    flex-direction: column;
+    align-items: center;
   }
 
+  .banner-details .left .buttons a.active{
+    margin-bottom: 12px;
+    font-size: 14px;
+    padding: 18px 12px;
+  }
+
+  .wrapper .blog-item{
+    width: auto;
+  }
+
+  .wrapper .blog-item:hover{
+    transition: 0.3s;
+    transform: none;
+    box-shadow: 0 25px 50px rgb(8 18 44 / 16%);
+  }
+  .header .logo img{
+    display: none;
+  }
+  .header .logo .logo-text{
+    display: block;
+  }
 }
