Blog  Section for mini device

--- a/css/style.css
+++ b/css/style.css
@@ -656,4 +656,35 @@ a {
     margin-bottom: 13%;
     height: auto;
   }
+
+  .blog .wrapper{
+    margin-top: 0;
+  }
+
+  .blog .top .heading{
+    font-size: 25px;
+    margin-bottom: 20px;
+  }
+
+  .blog .top .sub-heading{
+    font-size: 13px;
+  }
+
+  .upper-part .caption{
+    font-size: 10px;
+  }
+
+  .lower-part .title{
+    font-size: 15px;
+    text-align: center;
+  }
+
+  .lower-part .text{
+    font-size: 10px;
+    text-align: center;
+  }
+  .blog .view-all-btn a{
+    height: 45px;
+    width: 112px;
+  }
 }
